--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-  .amplify-button--primary{
+  /* .amplify-button--primary{
 	display: none !important;
   } 
 
@@ -38,9 +38,9 @@ code {
   }
   
   .home-page-link:hover {
-	transform: scale(1.1); /* Escalar la imagen en un 10% */
-  }
-  .home-page-link {
+	transform: scale(1.1); 
+  } */
+  /* .home-page-link {
     position: relative;
     display: inline-block;
   }
@@ -52,14 +52,14 @@ code {
     right: 0;
     bottom: 0;
     z-index: -1;
-    box-shadow: 4px 4px 8px rgba(2, 2, 2, 3); /* Ajusta estos valores según tus preferencias */
-  }
+    box-shadow: 4px 4px 8px rgba(2, 2, 2, 3); 
+  } */
 
-  .amplify-visually-hidden{
+  /* .amplify-visually-hidden{
 	display: none !important;
-  }
+  } */
 
-  
+/*   
   [data-amplify-authenticator] {
     --amplify-components-authenticator-router-box-shadow: 0 0 20px var(--amplify-colors-overlay-30);
     --amplify-components-authenticator-router-border-width: 0.3;
@@ -67,10 +67,10 @@ code {
     --amplify-components-tabs-item-active-border-color: var(--amplify-colors-red-100);
     --amplify-components-button-link-color: var(--amplify-colors-green-100);
     --amplify-components-tabs-item-color:var(--amplify-colors-red-100);
-  }
+  } */
   
-  .no-emai{
+  /* .no-emai{
     background-color: black;
   }
   
-  
+   */
